# miura

./: .gitignore  CMakeLists.txt  README.md
3rd/glew/src/: glew.c
3rd/glfw/src/: CMakeLists.txt
platform_osx/miura/: AppDelegate.h  AppDelegate.m  Info.plist  MyOpenGLView.h  MyOpenGLView.m  main.m
platform_osx/miura.xcodeproj/: project.pbxproj
platform_osx/miura.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform_osx/miura.xcodeproj/project.xcworkspace/xcuserdata/jintiao.xcuserdatad/: UserInterfaceState.xcuserstate
platform_osx/miura.xcodeproj/xcuserdata/jintiao.xcuserdatad/xcschemes/: miura.xcscheme  xcschememanagement.plist
platform_osx/miura/Base.lproj/: MainMenu.xib
platform_win/: miura.sln  miura.vcxproj  miura.vcxproj.filters
src/: Camera.cpp  Camera.h  Environment.h  GLHeader.h  Game.cpp  Game.h  GlobalHeader.h  MyMath.cpp  MyMath.h  OceanObject.cpp  OceanObject.h  OceanShader.cpp  OceanShader.h  Renderer.cpp  Renderer.h  WaveSimulator.cpp  WaveSimulator.h  main.cpp
vs2015/: miura.vcxproj
